css alignment issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,11 @@ html, body {
     height: 100%;
 }
 
+.navbar-text a {
+    position: relative;
+    top: -6px;
+}
+
 .img-row {
     height: 80%;
 }
